fixed ads not showing up

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -2103,9 +2103,9 @@ body:not(.gt2-opt-color-override) {
 
 // showMediaWithContentWarnings
 .gt2-opt-show-media-with-content-warnings {
-  [data-testid=tweet][data-gt2-show-media],
-  &.gt2-opt-show-media-with-content-warnings-sel-7 [data-testid=tweet] {
-    [aria-labelledby] > div > div:not([data-testid="card.wrapper"]) > div:not([role]) {
+  *:not([data-testid=placementTracking]) > * > [data-testid=tweet][data-gt2-show-media],
+  &.gt2-opt-show-media-with-content-warnings-sel-7 *:not([data-testid=placementTracking]) > * > [data-testid=tweet] {
+    [aria-labelledby] > div:not([data-testid]) > div:not([data-testid]) > div:not([role]) {
       &:nth-child(1) {
         filter: unset;
       }
